--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
   "joblib>=1.3",
   "python-dotenv>=1.0",
   "requests>=2.32",
+  "pyarrow>=16.0",
 ]
 
 [project.optional-dependencies]
